bugfix invisible settings in plugins in addonsMgr sidebar

--- a/chrome/skin/common/addons.css
+++ b/chrome/skin/common/addons.css
@@ -476,7 +476,7 @@
 		flex-direction: row;
 	}
 	
-	.inSidebar #detail-rows > setting[collapsed] {
+	.inSidebar #detail-rows > setting[collapsed="true"] {
 		display: none;
 	}
 	
